# V 0.3.4
#  Improvements
- Modified the way as the create_corpus method works.

# V 0.3.3
#  Improvements
- added new stop words to en.

# V 0.3.2
#  Improvements
- added new stop words to en.

# V 0.3.1
#  Improvements
- added new stop words to en.

# V 0.3.0
##  New features
- get_average_sentence_length: use it to calculate the average size of a sentence in a list of sentences. Use 'mode' to decide if you want the mean or the median
- representative_tokens: given a corpus and a percentage, get the tokens responsible for this percentage on the corpus
- from_json: Fetches a json response given an url and a dict of params

# V 0.2.0
##  New features
- Use replace_newline to replace newline char by another char
# Improvements
- Preprocess functions now support replace_newline parameter

# V 0.1.0
##  New features
- Expand current contractions on FR, PT-BR and EN