@@ -1,6 +1,7 @@
 # V 0.3.4
 #  Improvements
 - Modified the way as the create_corpus method works.
+- Check if is list in hapaxes
 
 # V 0.3.3
 #  Improvements
